@@ -1,82 +1,75 @@
 package org.elasticsearch.gradle.internal.test;
 
-import org.junit.jupiter.api.Timeout;
-import org.gradle.api.tasks.testing.Test;
-import org.mockito.stubbing.Answer;
-import org.gradle.api.JavaVersion;
-import org.gradle.api.tasks.TaskProvider;
-import org.gradle.api.Action;
-import org.mockito.MockedStatic;
-import org.elasticsearch.gradle.internal.info.BuildParams;
-import org.elasticsearch.gradle.util.GradleUtils;
-import org.gradle.api.Project;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.verify;
-import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.mockito.Mockito.atLeast;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.mockStatic;
-import org.junit.jupiter.api.Disabled;
+// import org.elasticsearch.gradle.internal.test.InternalClusterTestPlugin;
+// import org.gradle.api.JavaVersion;
+// import org.gradle.api.tasks.testing.Test;
+// import org.junit.jupiter.api.BeforeEach;
+// import org.elasticsearch.gradle.util.GradleUtils;
+// import org.junit.jupiter.api.Test;
+// import static org.junit.jupiter.api.Assertions.*;
+// import org.gradle.api.Project;
+// import org.gradle.api.tasks.TaskProvider;
+// import org.mockito.MockedStatic;
+// import static org.mockito.Mockito.*;
+// import org.gradle.api.Action;
+// import org.elasticsearch.gradle.internal.info.BuildParams;
+// import static org.mockito.ArgumentMatchers.any;
 
-@Timeout(value = 5)
 class InternalClusterTestPluginSapientGeneratedTest {
 
-    private final Project projectMock = mock(Project.class);
+//     private Project projectMock;
 
-    private final TaskProvider<Test> taskProviderMock = mock(TaskProvider.class);
+//     private TaskProvider<Test> taskProviderMock;
 
-    //Sapient generated method id: ${applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14LessThan0}, hash: A12A373AB8771081D6C60C168658C358
-    @Disabled()
-    @org.junit.jupiter.api.Test()
-    void applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14LessThan0() {
-        /* Branches:
-         * (BuildParams.getRuntimeJavaVersion().compareTo(JavaVersion.VERSION_14) < 0) : true  #  inside lambda$apply$0 method
-         */
-        //Arrange Statement(s)
-        try (MockedStatic<GradleUtils> gradleUtils = mockStatic(GradleUtils.class);
-            MockedStatic<BuildParams> buildParams = mockStatic(BuildParams.class)) {
-            buildParams.when(() -> BuildParams.getRuntimeJavaVersion()).thenReturn(JavaVersion.VERSION_1_2);
-            gradleUtils.when(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest")).thenReturn(taskProviderMock);
-            doNothing().when(taskProviderMock).configure((Action) any());
-            gradleUtils.when(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest")).thenAnswer((Answer<Void>) invocation -> null);
-            InternalClusterTestPlugin target = new InternalClusterTestPlugin();
-            //Act Statement(s)
-            target.apply(projectMock);
-            //Assert statement(s)
-            assertAll("result", () -> {
-                buildParams.verify(() -> BuildParams.getRuntimeJavaVersion(), atLeast(1));
-                gradleUtils.verify(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest"), atLeast(1));
-                verify(taskProviderMock).configure((Action) any());
-                gradleUtils.verify(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest"), atLeast(1));
-            });
-        }
-    }
+//     private InternalClusterTestPlugin plugin;
 
-    //Sapient generated method id: ${applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14NotLessThan0}, hash: 966BC62E10310156FB23A128516E8204
-    @Disabled()
-    @org.junit.jupiter.api.Test()
-    void applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14NotLessThan0() {
-        /* Branches:
-         * (BuildParams.getRuntimeJavaVersion().compareTo(JavaVersion.VERSION_14) < 0) : false  #  inside lambda$apply$0 method
-         */
-        //Arrange Statement(s)
-        try (MockedStatic<GradleUtils> gradleUtils = mockStatic(GradleUtils.class);
-            MockedStatic<BuildParams> buildParams = mockStatic(BuildParams.class)) {
-            buildParams.when(() -> BuildParams.getRuntimeJavaVersion()).thenReturn(JavaVersion.VERSION_HIGHER);
-            gradleUtils.when(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest")).thenReturn(taskProviderMock);
-            doNothing().when(taskProviderMock).configure((Action) any());
-            gradleUtils.when(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest")).thenAnswer((Answer<Void>) invocation -> null);
-            InternalClusterTestPlugin target = new InternalClusterTestPlugin();
-            //Act Statement(s)
-            target.apply(projectMock);
-            //Assert statement(s)
-            assertAll("result", () -> {
-                buildParams.verify(() -> BuildParams.getRuntimeJavaVersion(), atLeast(1));
-                gradleUtils.verify(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest"), atLeast(1));
-                verify(taskProviderMock).configure((Action) any());
-                gradleUtils.verify(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest"), atLeast(1));
-            });
-        }
-    }
+//     @BeforeEach
+//     void setUp() {
+//         projectMock = mock(Project.class);
+//         taskProviderMock = mock(TaskProvider.class);
+//         plugin = new InternalClusterTestPlugin();
+//     }
+
+//     @Test
+//     void applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14LessThan0() {
+//         try (MockedStatic<GradleUtils> gradleUtils = mockStatic(GradleUtils.class);
+//             MockedStatic<BuildParams> buildParams = mockStatic(BuildParams.class)) {
+//             buildParams.when(BuildParams::getRuntimeJavaVersion).thenReturn(JavaVersion.VERSION_13);
+//             gradleUtils.when(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest")).thenReturn(taskProviderMock);
+//             gradleUtils.when(() -> GradleUtils.extendSourceSet(any(), any(), any())).thenReturn(null);
+//             plugin.apply(projectMock);
+//             verify(taskProviderMock).configure(argThat((Action<Test> action) -> {
+//                 Test testMock = mock(Test.class);
+//                 action.execute(testMock);
+//                 verify(testMock).jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:CMSInitiatingOccupancyFraction=75", "-XX:+UseCMSInitiatingOccupancyOnly");
+//                 return true;
+//             }));
+//             gradleUtils.verify(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest"));
+//             gradleUtils.verify(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest"));
+//         }
+//     }
+
+//     @Test
+//     void applyWhenBuildParamsGetRuntimeJavaVersionCompareToJavaVersionVERSION_14NotLessThan0() {
+//         try (MockedStatic<GradleUtils> gradleUtils = mockStatic(GradleUtils.class);
+//             MockedStatic<BuildParams> buildParams = mockStatic(BuildParams.class)) {
+//             buildParams.when(BuildParams::getRuntimeJavaVersion).thenReturn(JavaVersion.VERSION_14);
+//             gradleUtils.when(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest")).thenReturn(taskProviderMock);
+//             gradleUtils.when(() -> GradleUtils.extendSourceSet(any(), any(), any())).thenReturn(null);
+//             plugin.apply(projectMock);
+//             verify(taskProviderMock).configure(argThat((Action<Test> action) -> {
+//                 Test testMock = mock(Test.class);
+//                 action.execute(testMock);
+//                 verify(testMock).jvmArgs("-XX:+UseG1GC");
+//                 return true;
+//             }));
+//             graduleUtils.verify(() -> GradleUtils.addTestSourceSet(projectMock, "internalClusterTest"));
+//             graduleUtils.verify(() -> GradleUtils.extendSourceSet(projectMock, "test", "internalClusterTest"));
+//         }
+//     }
+
+//     @Test
+//     void applySourceSetNameConstant() {
+//         assertEquals("internalClusterTest", InternalClusterTestPlugin.SOURCE_SET_NAME);
+//     }
 }
