@@ -2,6 +2,7 @@ package org.elasticsearch.gradle.test;
 
 // import org.elasticsearch.gradle.test.GradleTestPolicySetupPlugin;
 // import org.gradle.api.invocation.Gradle;
+// import org.gradle.api.DomainObjectSet;
 // import org.junit.jupiter.api.BeforeEach;
 // import org.junit.jupiter.api.Test;
 // import org.junit.jupiter.params.ParameterizedTest;
@@ -9,6 +10,7 @@ package org.elasticsearch.gradle.test;
 // import java.io.File;
 // import org.gradle.api.Plugin;
 // import org.mockito.Mock;
+// import org.gradle.api.tasks.TaskContainer;
 // import org.gradle.api.tasks.testing.Test;
 // import java.util.Set;
 // import org.mockito.MockitoAnnotations;
@@ -28,6 +30,12 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 //     @Mock
 //     private Test testTask;
 
+//     @Mock
+//     private TaskContainer taskContainer;
+
+//     @Mock
+//     private DomainObjectSet<Test> testTasks;
+
 //     private GradleTestPolicySetupPlugin plugin;
 
 //     @BeforeEach
@@ -35,8 +43,8 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 //         MockitoAnnotations.openMocks(this);
 //         plugin = new GradleTestPolicySetupPlugin();
 //         when(project.getGradle()).thenReturn(gradle);
-//         when(project.getTasks()).thenReturn(mock(org.gradle.api.tasks.TaskContainer.class));
-//         when(project.getTasks().withType(Test.class)).thenReturn(mock(org.gradle.api.DomainObjectSet.class));
+//         when(project.getTasks()).thenReturn(taskContainer);
+//         when(taskContainer.withType(Test.class)).thenReturn(testTasks);
 //     }
 
 //     @Test
@@ -48,7 +56,7 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 
 //     @Test
 //     void testSystemPropertiesSet() {
-//         when(project.getTasks().withType(Test.class).iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
 //         plugin.apply(project);
 //         verify(testTask).systemProperty("tests.gradle", true);
 //         verify(testTask).systemProperty(eq("tests.task"), any());
@@ -56,7 +64,7 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 
 //     @Test
 //     void testJvmArgsSet() {
-//         when(project.getTasks().withType(Test.class).iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
 //         plugin.apply(project);
 //         verify(testTask).jvmArgs("-Djava.security.manager=allow");
 //     }
@@ -64,7 +72,7 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 //     @ParameterizedTest
 //     @ValueSource(strings = { "/home/gradle", "/Users/gradle", "C:\\Gradle" })
 //     void testGradleHomeSystemPropertySet(String gradleHome) {
-//         when(project.getTasks().withType(Test.class).iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
 //         when(gradle.getGradleHomeDir()).thenReturn(new File(gradleHome));
 //         plugin.apply(project);
 //         verify(testTask).getJvmArgumentProviders();
@@ -73,7 +81,7 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 //     @ParameterizedTest
 //     @ValueSource(strings = { "7.4.2", "8.0.1", "8.1.0" })
 //     void testGradleWorkerJarSystemPropertySet(String gradleVersion) {
-//         when(project.getTasks().withType(Test.class).iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
 //         when(gradle.getGradleUserHomeDir()).thenReturn(new File("/home/user/.gradle"));
 //         when(gradle.getGradleVersion()).thenReturn(gradleVersion);
 //         plugin.apply(project);
@@ -82,9 +90,63 @@ class GradleTestPolicySetupPluginSapientGeneratedTest {
 
 //     @Test
 //     void testNonInputPropertiesAdded() {
-//         when(project.getTasks().withType(Test.class).iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
 //         when(gradle.getGradleHomeDir()).thenReturn(new File("/home/gradle"));
 //         when(gradle.getGradleUserHomeDir()).thenReturn(new File("/home/user/.gradle"));
+//         when(gradle.getGradleVersion()).thenReturn("7.4.2");
+//         plugin.apply(project);
+//         verify(testTask).getJvmArgumentProviders();
+//     }
+
+//     @Test
+//     void testSystemPropertyCommandLineArgumentProviderCreated() {
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(gradle.getGradleHomeDir()).thenReturn(new File("/home/gradle"));
+//         when(gradle.getGradleUserHomeDir()).thenReturn(new File("/home/user/.gradle"));
+//         when(gradle.getGradleVersion()).thenReturn("7.4.2");
+//         plugin.apply(project);
+//         verify(testTask).getJvmArgumentProviders();
+//     }
+
+//     @Test
+//     void testMultipleTestTasks() {
+//         Test testTask2 = mock(Test.class);
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask, testTask2).iterator());
+//         plugin.apply(project);
+//         verify(testTask).systemProperty("tests.gradle", true);
+//         verify(testTask2).systemProperty("tests.gradle", true);
+//         verify(testTask).jvmArgs("-Djava.security.manager=allow");
+//         verify(testTask2).jvmArgs("-Djava.security.manager=allow");
+//     }
+
+//     @Test
+//     void testExceptionHandling() {
+//         when(testTasks.iterator()).thenThrow(new RuntimeException("Test Exception"));
+//         assertThrows(RuntimeException.class, () -> plugin.apply(project));
+//     }
+
+//     @Test
+//     void testEmptyTestTasks() {
+//         when(testTasks.iterator()).thenReturn(Set.<Test>of().iterator());
+//         plugin.apply(project);
+//         verify(testTasks).configureEach(any());
+//     }
+
+//     @Test
+//     void testNullGradleHomeDir() {
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(gradle.getGradleHomeDir()).thenReturn(null);
+//         when(gradle.getGradleUserHomeDir()).thenReturn(new File("/home/user/.gradle"));
+//         when(gradle.getGradleVersion()).thenReturn("7.4.2");
+//         plugin.apply(project);
+//         verify(testTask).getJvmArgumentProviders();
+//     }
+
+//     @Test
+//     void testNullGradleUserHomeDir() {
+//         when(testTasks.iterator()).thenReturn(Set.of(testTask).iterator());
+//         when(gradle.getGradleHomeDir()).thenReturn(new File("/home/gradle"));
+//         when(gradle.getGradleUserHomeDir()).thenReturn(null);
 //         when(gradle.getGradleVersion()).thenReturn("7.4.2");
 //         plugin.apply(project);
 //         verify(testTask).getJvmArgumentProviders();
